2015-03-03  Steve Ellcey  <sellcey@imgtec.com>

	* libc/machine/mips/memcpy.S: Add support for mips32r6/mips64r6.

2015-02-26  Steve Ellcey  <sellcey@imgtec.com>

	* libc/machine/mips/memcpy.S: Fix macro indentation and typos in
	comments.

2015-02-24  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* libc/include/sys/cdefs.h (_GNU_SOURCE): Move check so it has an
	effect when _XOPEN_SOURCE is also defined.

2015-02-17  Hale Wang  <hale.wang@arm.com>

	* libc/machine/arm/aeabi_memclr.c: New file to support
	aeabi_memclr.
	* libc/machine/arm/aeabi_memset.c: New file to support
	aeabi_memset.
	* libc/machine/arm/aeabi_memset-soft.S: Ditto.
	* libc/machine/arm/aeabi_memset-arm.S: Ditto.
	* libc/machine/arm/aeabi_memset-thumb.S: Ditto.
	* libc/machine/arm/aeabi_memset-thumb2.S: Ditto.
	* libc/machine/arm/Makefile.am: Add dependencies.
	* libc/machine/arm/Makefile.in: Regenerated.

2015-02-17  Hale Wang  <hale.wang@arm.com>

	* libc/machine/arm/aeabi_memmove.c: New file to support
	aeabi_memmove.
	* libc/machine/arm/aeabi_memmove-soft.S: Ditto.
	* libc/machine/arm/aeabi_memmove-arm.S: Ditto.
	* libc/machine/arm/aeabi_memmove-thumb.S: Ditto.
	* libc/machine/arm/aeabi_memmove-thumb2.S: Ditto.
	* libc/machine/arm/Makefile.am: Add dependencies.
	* libc/machine/arm/Makefile.in: Regenerated.

2015-02-06  Nick Clifton  <nickc@redhat.com>

	* libc/include/complex.h (cabsl): Add prototype.
	(cimagl): Add prototype.
	(creall): Add prototype.
	* libc/include/ieeefp.h: Include float.h.
	(EXT_EXPBITS, EXT_FRACHBITS, EXT_FRACLBITS)
	(EXT_EXP_INFNAN. EXT_EXP_BIAS, EXT_FRACBITS): Define.
	(struct ieee_ext, union ieee_ext_u): New types for long double
	support.
	* libc/include/math.h (finitel): Add prototype.
	(hypotl): Add prototype.
	(sqrtl): Add prototype.
	* libm/common/Makefile.am (lsrc): Add sl_finite.c.
	* libm/common/Makefile.in: Regenerate.
	* libm/common/fdlibm.h (__ieee754_hypotl): Add prototype.
	* libm/common/hypotl.c (hypotl): Add implementation for when long